--- a/front/index.html
+++ b/front/index.html
@@ -7,8 +7,36 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
+
+<body onload="obterFilmes()">
   <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="d-none alert alert-danger alert-danger-dismissible fade" role="alert">
+          Preencha todos os campos!
+          <button type="button" class="btn-close" data-bd-dismiss="alert" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-4">
+        <div class="form-floating mb-3">
+          <input type="text" id="tituloInput" class="form-control" placeholder="">
+          <label for="tituloInput">Título:</label>
+        </div>
+      </div>
+      <div class="col-md-8 col-lg-4">
+        <div class="form-floating mb-3">
+          <input type="text" id="sinopseInput" class="form-control" placeholder="">
+          <label for="sinopseInput">Sinopse:</label>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <button class="btn btn-outline-primary w-100" onclick="cadastrarFilme()">Cadastrar</button>
+      </div>
+    </div>
     <div class="row justify-content-center">
       <!-- tudo que ficar ai dentro vai ficar no meio -->
         <div class="col-md-8">
@@ -20,7 +48,7 @@
               </tr>
             </thead>
             <tbody>
-              
+               
             </tbody>
           </table>
         </div>
@@ -30,8 +58,7 @@
 
 
 
-   <script src="https://cdn.jsdelivr.net/npm/axios.dist/axios.min.js"></script>
-
+   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
 </html>
